@@ -110,7 +110,7 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
                     OrganizationBusinessDTO dto1 = new OrganizationBusinessDTO();
                     BeanUtils.copyProperties(organizationBusiness, dto1);
                     if (!highlight.isEmpty()) {
-                        dto1.setOrgName(highlight.get("orgName").get(0));
+                        dto1.setOrgName(highlight.get("orgName").getFirst());
                     }
                     // 业务环节
                     dto1.setLink(StringUtils.commaDelimitedListToStringArray(organizationBusiness.getLink()));
@@ -155,7 +155,7 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void insert(OrganizationBusinessDTO dto) throws IOException {
-        boolean exists = organizationBusinessRepository.exists((root, query, criteriaBuilder) -> {
+        boolean exists = organizationBusinessRepository.exists((root, query, _) -> {
             List<Predicate> predicateList = new LinkedList<>();
             // 本单位
             predicateList.add(root.get(OrganizationBusiness.ORG_ID).in(UserUtils.getOrgId()));
@@ -173,6 +173,7 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
             } else {
                 predicateList.add(root.get(OrganizationBusiness.DISTRICT_CODE).in(dto.getDistrictCode()));
             }
+            assert query != null;
             return query.where(predicateList.toArray(Predicate[]::new)).getRestriction();
         });
         if (exists) {
@@ -236,16 +237,20 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
 
         for (String link : StringUtils.commaDelimitedListToStringArray(organizationBusiness.getLink())) {
             OrganizationBusinessBusinessLinksEnum.getEnumByDesc(link).ifPresent(anEnum -> {
-                Role role = roleRepository.findOne((root, query, criteriaBuilder) -> root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
+                Role role = roleRepository.findOne((root, _, _) ->
+                                root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
                         .orElseThrow(() -> BizRuntimeException.from("没有找到对应角色"));
 
                 // 如果该单位对应的通过的业务类型为空才进行删除操作
                 List<OrganizationBusiness> organizationBusinessList = organizationBusinessRepository.findAll(
-                        (root, query, criteriaBuilder) -> query.where(root.get(OrganizationBusiness.ORG_ID).in(UserUtils.getOrgId()),
-                                criteriaBuilder.like(root.get(OrganizationBusiness.LINK), "%" + link + "%", '/'),
-                                root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction());
+                        (root, query, criteriaBuilder) -> {
+                            assert query != null;
+                            return query.where(root.get(OrganizationBusiness.ORG_ID).in(UserUtils.getOrgId()),
+                                    criteriaBuilder.like(root.get(OrganizationBusiness.LINK), "%" + link + "%", '/'),
+                                    root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction();
+                        });
                 if (organizationBusinessList.isEmpty()) {
-                    userRoleRepository.delete((root, query, criteriaBuilder) ->
+                    userRoleRepository.delete((root, _, criteriaBuilder) ->
                             criteriaBuilder.and(root.get(UserRole.USER_ID).in(UserUtils.getId()),
                                     root.get(UserRole.ROLE_ID).in(role.getId())));
                 }
@@ -253,16 +258,20 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
         }
         for (String type : StringUtils.commaDelimitedListToStringArray(organizationBusiness.getType())) {
             OrganizationBusinessQualityControlTypeEnum.getEnumByDesc(type).ifPresent(anEnum -> {
-                Role role = roleRepository.findOne((root, query, criteriaBuilder) -> root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
+                Role role = roleRepository.findOne((root, _, _) ->
+                                root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
                         .orElseThrow(() -> BizRuntimeException.from("没有找到对应角色"));
 
                 // 如果该单位对应的通过的业务类型为空才进行删除操作
                 List<OrganizationBusiness> organizationBusinessList = organizationBusinessRepository.findAll(
-                        (root, query, criteriaBuilder) -> query.where(root.get(OrganizationBusiness.ORG_ID).in(UserUtils.getOrgId()),
-                                criteriaBuilder.like(root.get(OrganizationBusiness.TYPE), "%" + type + "%", '/'),
-                                root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction());
+                        (root, query, criteriaBuilder) -> {
+                            assert query != null;
+                            return query.where(root.get(OrganizationBusiness.ORG_ID).in(UserUtils.getOrgId()),
+                                    criteriaBuilder.like(root.get(OrganizationBusiness.TYPE), "%" + type + "%", '/'),
+                                    root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction();
+                        });
                 if (organizationBusinessList.isEmpty()) {
-                    userRoleRepository.delete((root, query, criteriaBuilder) ->
+                    userRoleRepository.delete((root, _, criteriaBuilder) ->
                             criteriaBuilder.and(root.get(UserRole.USER_ID).in(UserUtils.getId()),
                                     root.get(UserRole.ROLE_ID).in(role.getId())));
                 }
@@ -291,18 +300,19 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
                         .doc(organizationBusiness),
                 OrganizationBusiness.class);
 
-        User user = userRepository.findOne((root, query, criteriaBuilder) ->
+        User user = userRepository.findOne((root, _, criteriaBuilder) ->
                         criteriaBuilder.and(root.get(User.ORG_ID).in(organizationBusiness.getOrgId()),
                                 root.get(User.MANAGER).in(Boolean.TRUE)))
                 .orElseThrow(() -> BizRuntimeException.from("没有找到该业务的单位管理员"));
 
         for (String link : StringUtils.commaDelimitedListToStringArray(organizationBusiness.getLink())) {
             OrganizationBusinessBusinessLinksEnum.getEnumByDesc(link).ifPresent(anEnum -> {
-                Role role = roleRepository.findOne((root, query, criteriaBuilder) -> root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
+                Role role = roleRepository.findOne((root, _, _) ->
+                                root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
                         .orElseThrow(() -> BizRuntimeException.from("没有找到对应角色"));
                 if ("已通过".equals(dto.getState())) {
                     // 如果当前用户没有当前角色才进行添加操作
-                    boolean exists = userRoleRepository.exists((root, query, criteriaBuilder) ->
+                    boolean exists = userRoleRepository.exists((root, _, criteriaBuilder) ->
                             criteriaBuilder.and(root.get(UserRole.USER_ID).in(user.getId()),
                                     root.get(UserRole.ROLE_ID).in(role.getId())));
                     if (!exists) {
@@ -311,11 +321,14 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
                 } else {
                     // 如果该单位对应的通过的业务类型为空才进行删除操作
                     List<OrganizationBusiness> organizationBusinessList = organizationBusinessRepository.findAll(
-                            (root, query, criteriaBuilder) -> query.where(root.get(OrganizationBusiness.ORG_ID).in(user.getOrgId()),
-                                    criteriaBuilder.like(root.get(OrganizationBusiness.LINK), "%" + link + "%", '/'),
-                                    root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction());
+                            (root, query, criteriaBuilder) -> {
+                                assert query != null;
+                                return query.where(root.get(OrganizationBusiness.ORG_ID).in(user.getOrgId()),
+                                        criteriaBuilder.like(root.get(OrganizationBusiness.LINK), "%" + link + "%", '/'),
+                                        root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction();
+                            });
                     if (organizationBusinessList.isEmpty()) {
-                        userRoleRepository.delete((root, query, criteriaBuilder) ->
+                        userRoleRepository.delete((root, _, criteriaBuilder) ->
                                 criteriaBuilder.and(root.get(UserRole.USER_ID).in(user.getId()),
                                         root.get(UserRole.ROLE_ID).in(role.getId())));
                     }
@@ -324,11 +337,12 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
         }
         for (String type : StringUtils.commaDelimitedListToStringArray(organizationBusiness.getType())) {
             OrganizationBusinessQualityControlTypeEnum.getEnumByDesc(type).ifPresent(anEnum -> {
-                Role role = roleRepository.findOne((root, query, criteriaBuilder) -> root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
+                Role role = roleRepository.findOne((root, _, _) ->
+                                root.get(Role.AUTHORITY).in("ADMIN_" + anEnum.name()))
                         .orElseThrow(() -> BizRuntimeException.from("没有找到对应角色"));
                 if ("已通过".equals(dto.getState())) {
                     // 如果当前用户没有当前角色才进行添加操作
-                    boolean exists = userRoleRepository.exists((root, query, criteriaBuilder) ->
+                    boolean exists = userRoleRepository.exists((root, _, criteriaBuilder) ->
                             criteriaBuilder.and(root.get(UserRole.USER_ID).in(user.getId()),
                                     root.get(UserRole.ROLE_ID).in(role.getId())));
                     if (!exists) {
@@ -337,11 +351,14 @@ public class OrganizationBusinessServiceImpl implements IOrganizationBusinessSer
                 } else {
                     // 如果该单位对应的通过的业务类型为空才进行删除操作
                     List<OrganizationBusiness> organizationBusinessList = organizationBusinessRepository.findAll(
-                            (root, query, criteriaBuilder) -> query.where(root.get(OrganizationBusiness.ORG_ID).in(user.getOrgId()),
-                                    criteriaBuilder.like(root.get(OrganizationBusiness.TYPE), "%" + type + "%", '/'),
-                                    root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction());
+                            (root, query, criteriaBuilder) -> {
+                                assert query != null;
+                                return query.where(root.get(OrganizationBusiness.ORG_ID).in(user.getOrgId()),
+                                        criteriaBuilder.like(root.get(OrganizationBusiness.TYPE), "%" + type + "%", '/'),
+                                        root.get(OrganizationBusiness.STATE).in("已通过")).getRestriction();
+                            });
                     if (organizationBusinessList.isEmpty()) {
-                        userRoleRepository.delete((root, query, criteriaBuilder) ->
+                        userRoleRepository.delete((root, _, criteriaBuilder) ->
                                 criteriaBuilder.and(root.get(UserRole.USER_ID).in(user.getId()),
                                         root.get(UserRole.ROLE_ID).in(role.getId())));
                     }
